tests/should_fail/sf016_import_bad_syntax.hs
-- Should fail: malformed import statement
module Sf016ImportBadSyntax where

import 42
